--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/cookie-parser": "^1.4.6",
         "@types/node": "^20.10.7",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
@@ -25,7 +26,9 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "cookie-parser": "^1.4.6",
         "express": "^4.18.2",
+        "redis": "^4.6.12",
         "vitest": "^1.1.3"
     },
     "eslintConfig": {
