--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^4.17.21",
         "@types/cookie-parser": "^1.4.6",
+        "@types/express": "^4.17.21",
         "@types/node": "^20.10.7",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
         "prettier": "3.1.1",
         "tsc-watch": "^6.0.4",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.1.3"
     },
     "dependencies": {
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "redis": "^4.6.12",
-        "vitest": "^1.1.3"
+        "redis": "^4.6.12"
     },
     "eslintConfig": {
         "extends": [
