feat: format on push

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test": "vitest",
         "build": "tsc",
         "lint": "eslint . --ext .ts",
+        "format": "prettier --write src/**/*.ts",
         "start": "node ."
     },
     "keywords": [],
