--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=password-manager
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 REDIS_URL=redis://127.0.0.1:6379
