--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build": "tsc",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write src/**/*.ts",
+
         "start": "node ."
     },
     "keywords": [],
@@ -18,6 +19,11 @@
     "devDependencies": {
         "@types/cookie-parser": "^1.4.6",
         "@types/express": "^4.17.21",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^20.10.7",
+        "@types/pg": "^8.10.9",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
+        "@typescript-eslint/parser": "^6.18.1",
         "@types/node": "^20.10.7",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
@@ -33,6 +39,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
+        "pg": "^8.11.3",
         "redis": "^4.6.12"
     },
     "eslintConfig": {
