--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "build": "tsc",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write src/**/*.ts",
-
         "start": "node ."
     },
     "keywords": [],
@@ -24,10 +23,6 @@
         "@types/pg": "^8.10.9",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
-        "@types/node": "^20.10.7",
-        "@typescript-eslint/eslint-plugin": "^6.18.1",
-        "@typescript-eslint/parser": "^6.18.1",
-        "@types/morgan": "^1.9.9",
         "eslint": "^8.56.0",
         "prettier": "3.1.1",
         "tsc-watch": "^6.0.4",
@@ -40,7 +35,8 @@
         "express": "^4.18.2",
         "morgan": "^1.10.0",
         "pg": "^8.11.3",
-        "redis": "^4.6.12"
+        "redis": "^4.6.12",
+        "zod": "^3.22.4"
     },
     "eslintConfig": {
         "extends": [
